# binaryTool

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
python/: tracker.py
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
